--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,9 @@
   <meta name="CocoaVersion" content="1344.72">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Menlo; color: #323333; -webkit-text-stroke: #323333}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Menlo; -webkit-text-stroke: #000000; min-height: 14.0px}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Menlo; color: #183691; -webkit-text-stroke: #183691}
     span.s1 {font-kerning: none}
-    span.s2 {font-kerning: none; color: #323333; -webkit-text-stroke: 0px #323333}
-    span.s3 {font-kerning: none; color: #183691; -webkit-text-stroke: 0px #183691}
     table.t1 {border-collapse: collapse}
-    td.td1 {width: 1177.0px; padding: 0.0px 10.0px 0.0px 10.0px}
-    td.td2 {width: 50.0px; min-width: 50.0px; border-style: solid; border-width: 0.0px 1.0px 0.0px 0.0px; border-color: transparent #eeeeee transparent transparent; padding: 0.0px 10.0px 0.0px 10.0px}
+    td.td1 {width: 764.0px; padding: 0.0px 10.0px 0.0px 10.0px}
   </style>
 </head>
 <body>
@@ -23,158 +18,28 @@
   <tbody>
     <tr>
       <td colspan="2" valign="top" class="td1">
-        <p class="p1"><span class="s1">{</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">"name"</span><span class="s2">: </span><span class="s1">"heroku/heroku-buildpack-php"</span><span class="s2">,</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">"description"</span><span class="s2">: </span><span class="s1">"Toolkit for starting a PHP application locally, with or without foreman, using the same config for PHP/HHVM and Apache2/Nginx as on Heroku"</span><span class="s2">,</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">"keywords"</span><span class="s2">: [</span><span class="s1">"heroku"</span><span class="s2">, </span><span class="s1">"foreman"</span><span class="s2">, </span><span class="s1">"php"</span><span class="s2">, </span><span class="s1">"hhvm"</span><span class="s2">, </span><span class="s1">"apache"</span><span class="s2">, </span><span class="s1">"apache2"</span><span class="s2">, </span><span class="s1">"nginx"</span><span class="s2">],</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">"homepage"</span><span class="s2">: </span><span class="s1">"http://github.com/heroku/heroku-buildpack-php"</span><span class="s2">,</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">"type"</span><span class="s2">: </span><span class="s1">"library"</span><span class="s2">,</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">"license"</span><span class="s2">: </span><span class="s1">"MIT"</span><span class="s2">,</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">"authors"</span><span class="s2">: [</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">            </span></span><span class="s1">"name"</span><span class="s2">: </span><span class="s1">"David Zuelke"</span><span class="s2">,</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">            </span></span><span class="s1">"email"</span><span class="s2">: </span><span class="s1">"dz@heroku.com"</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>}</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>],</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span></span><span class="s3">"bin"</span><span class="s1">: [</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">        </span></span><span class="s1">"bin/heroku-hhvm-apache2"</span><span class="s2">,</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">        </span></span><span class="s1">"bin/heroku-hhvm-nginx"</span><span class="s2">,</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">        </span></span><span class="s1">"bin/heroku-php-apache2"</span><span class="s2">,</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p3"><span class="s2"><span class="Apple-converted-space">        </span></span><span class="s1">"bin/heroku-php-nginx"</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>]</span></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" class="td2">
-        <p class="p2"><span class="s1"></span><br></p>
-      </td>
-      <td valign="top" class="td1">
+        <p class="p1"><span class="s1">{"name": "heroku/heroku-buildpack-php","description": "Toolkit for starting a PHP application locally, with or without foreman, using the same config for PHP/HHVM and Apache2/Nginx as on Heroku","keywords": ["heroku","foreman",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"php",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"hhvm",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"apache",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"apache2",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"nginx"</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>],</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"homepage": "http://github.com/heroku/heroku-buildpack-php",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"type": "library",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"license": "MIT",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"authors": [</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>{</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"name": "David Zuelke",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"email": "dz@heroku.com"<span class="Apple-converted-space"> </span></span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>}<span class="Apple-converted-space"> </span></span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>],</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"bin": [</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"bin/heroku-hhvm-apache2",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"bin/heroku-hhvm-nginx",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"bin/heroku-php-apache2",</span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"bin/heroku-php-nginx"<span class="Apple-converted-space"> </span></span></p>
+        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>]<span class="Apple-converted-space"> </span></span></p>
         <p class="p1"><span class="s1">}</span></p>
       </td>
     </tr>
