--- a/composer.json
+++ b/composer.json
@@ -1,49 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <title>MBR</title>
-  <meta name="Generator" content="Cocoa HTML Writer">
-  <meta name="CocoaVersion" content="1344.72">
-  <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Menlo; color: #323333; -webkit-text-stroke: #323333}
-    span.s1 {font-kerning: none}
-    table.t1 {border-collapse: collapse}
-    td.td1 {width: 764.0px; padding: 0.0px 10.0px 0.0px 10.0px}
-  </style>
-</head>
-<body>
-<table cellspacing="0" cellpadding="0" class="t1">
-  <tbody>
-    <tr>
-      <td colspan="2" valign="top" class="td1">
-        <p class="p1"><span class="s1">{"name": "heroku/heroku-buildpack-php","description": "Toolkit for starting a PHP application locally, with or without foreman, using the same config for PHP/HHVM and Apache2/Nginx as on Heroku","keywords": ["heroku","foreman",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"php",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"hhvm",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"apache",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"apache2",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"nginx"</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>],</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"homepage": "http://github.com/heroku/heroku-buildpack-php",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"type": "library",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"license": "MIT",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"authors": [</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>{</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"name": "David Zuelke",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"email": "dz@heroku.com"<span class="Apple-converted-space"> </span></span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>}<span class="Apple-converted-space"> </span></span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>],</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"bin": [</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"bin/heroku-hhvm-apache2",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"bin/heroku-hhvm-nginx",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"bin/heroku-php-apache2",</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>"bin/heroku-php-nginx"<span class="Apple-converted-space"> </span></span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>]<span class="Apple-converted-space"> </span></span></p>
-        <p class="p1"><span class="s1">}</span></p>
-      </td>
-    </tr>
-  </tbody>
-</table>
-</body>
-</html>
+{\rtf1\ansi\ansicpg1252\cocoartf1344\cocoasubrtf720
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
+{\colortbl;\red255\green255\blue255;}
+\paperw11900\paperh16840\margl1440\margr1440\vieww10800\viewh8400\viewkind0
+\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural
+
+\f0\fs24 \cf0 \{ \
+	 \'93require\'94:  \{ \
+		\'93monolog/monolog\'94:\'941.2.*\'94\
+	\}\
+\}}
